--- a/package.json
+++ b/package.json
@@ -1,29 +1,44 @@
 {
-  "name": "test",
-  "version": "0.0.0",
+  "name": "ko-siteengine",
+  "version": "2.0.0",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/low-res/ko-siteengine.git"
+  },
+  "license": "MIT",
+  "format": "amd",
+  "jspm": {
+    "main": "formater",
+    "directories": {
+      "lib": "src",
+      "test": "tests"
+    },
+    "dependencies": {
+      "CreateJS/PreloadJS": "github:CreateJS/PreloadJS@^0.6.2",
+      "amplify": "github:mikehostetler/amplify@^1.1.2",
+      "hasher": "npm:hasher@^1.2.0",
+      "jquery": "npm:jquery@^3.2.1",
+      "knockout": "github:knockout/knockout@^3.4.2",
+      "lodash": "npm:lodash@^4.17.4",
+      "low-res/formater": "github:low-res/formater@master",
+      "low-res/translator": "github:low-res/translator@master",
+      "millermedeiros/crossroads.js": "npm:crossroads@^0.12.2",
+      "preloadjs": "npm:preloadjs@^0.0.0"
+    },
+    "devDependencies": {
+      "jasmine-core": "npm:jasmine-core@^2.7.0",
+      "karma": "npm:karma@^1.7.0",
+      "karma-chrome-launcher": "npm:karma-chrome-launcher@^2.2.0",
+      "karma-jasmine": "npm:karma-jasmine@^1.1.0",
+      "karma-systemjs": "npm:karma-systemjs@^0.16.0"
+    }
+  },
   "devDependencies": {
-    "gulp": "^3.6.2",
-    "gulp-requirejs-bundler": "^0.1.1",
-    "gulp-concat": "~2.2.0",
-    "gulp-clean": "~0.2.4",
-    "event-stream": "~3.1.0",
-    "gulp-replace": "~0.2.0",
-    "gulp-uglify": "~0.2.1",
-    "gulp-html-replace": "~1.0.0",
-    "gulp-jsdoc": "",
-    "gulp-header": "~1.2.2",
-    "del": "~1.1.1",
-
-    "karma": "^0.12.15",
-    "karma-chrome-launcher": "^0.1.3",
-    "karma-jasmine": "^0.2.0",
-    "karma-requirejs": "^0.2.1",
-    "karma-requireglobal-preprocessor": "0.0.0",
-    "karma-coverage": "",
-    "requirejs": "^2.1.11",
-
-    "deeply": "~0.1.0",
-    "chalk": "~0.4.0",
-    "bower-requirejs": "*"
+    "jasmine-core": "^2.7.0",
+    "jspm": "^0.16.53",
+    "karma": "^1.7.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-jasmine": "^1.1.0",
+    "karma-systemjs": "^0.16.0"
   }
 }
