--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "license": "MIT",
   "format": "amd",
   "jspm": {
-    "main": "core/pageManager",
+    "main": "index",
     "directories": {
       "lib": "src",
       "test": "tests"
